--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,9 @@ release/
 lib/
 *.ld
 skyline_patch*/
+romfs*/
 scripts/.idea/*
 include/ukr*.hpp
 !exported.txt
 !linkerscripts/application.ld
+!v160_v150_change.txt
