add ftp scripts and update README

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,9 @@ lib/
 skyline_patch*/
 romfs*/
 scripts/.idea/*
+crash_reports/
 include/ukr*.hpp
 !exported.txt
 !linkerscripts/application.ld
 !v160_v150_change.txt
+!version.txt
