add botw as submodule and improved scripts

--- a/.gitignore
+++ b/.gitignore
@@ -17,17 +17,15 @@
 *.npdm
 *.log
 .vscode/
+__pycache__
 build*/
 debug/
 release/
 lib/
-*.ld
 skyline_patch*/
 romfs*/
 scripts/.idea/*
 crash_reports/
-include/ukr*.hpp
 !exported.txt
-!linkerscripts/application.ld
 !v160_v150_change.txt
 !version.txt
