--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "libs/NintendoSDK"]
 	path = libs/NintendoSDK
 	url = https://github.com/open-ead/nnheaders
+[submodule "libs/botw"]
+	path = libs/botw
+	url = https://github.com/zeldaret/botw
