--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 *.ips
 *.npdm
 *.log
+*.specs
 .vscode/
 __pycache__
 build*/
@@ -27,4 +28,3 @@ scripts/.idea/*
 crash_reports/
 !exported.txt
 !v160_v150_change.txt
-!version.txt
